[gd_scene load_steps=11 format=2]

[ext_resource path="res://ARVROrigin.gd" type="Script" id=1]
[ext_resource path="res://EyeTrackingRig.gd" type="Script" id=2]
[ext_resource path="res://MyClass.gdns" type="Script" id=3]

[sub_resource type="SphereMesh" id=4]
radius = 0.025
height = 0.05
radial_segments = 32
rings = 16

[sub_resource type="SpatialMaterial" id=5]
albedo_color = Color( 1, 0, 0, 1 )

[sub_resource type="SpatialMaterial" id=6]
albedo_color = Color( 0.278431, 0.509804, 1, 1 )

[sub_resource type="SpatialMaterial" id=7]
albedo_color = Color( 0.831373, 0.741176, 0, 1 )

[sub_resource type="CubeMesh" id=1]

[sub_resource type="CylinderMesh" id=2]

[sub_resource type="SphereMesh" id=3]

[node name="Spatial" type="Spatial"]

[node name="ARVROrigin" type="ARVROrigin" parent="."]
script = ExtResource( 1 )

[node name="ARVRCamera" type="ARVRCamera" parent="ARVROrigin"]

[node name="EyeTrackingRig" type="Spatial" parent="ARVROrigin/ARVRCamera"]
script = ExtResource( 2 )

[node name="EyeTracker" type="Node" parent="ARVROrigin/ARVRCamera/EyeTrackingRig"]
script = ExtResource( 3 )

[node name="LeftMarker" type="MeshInstance" parent="ARVROrigin/ARVRCamera/EyeTrackingRig"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1 )
mesh = SubResource( 4 )
material/0 = SubResource( 5 )

[node name="RightMarker" type="MeshInstance" parent="ARVROrigin/ARVRCamera/EyeTrackingRig"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1 )
mesh = SubResource( 4 )
material/0 = SubResource( 6 )

[node name="CombinedMarker" type="MeshInstance" parent="ARVROrigin/ARVRCamera/EyeTrackingRig"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1 )
mesh = SubResource( 4 )
material/0 = SubResource( 7 )

[node name="HeadLight" type="SpotLight" parent="ARVROrigin/ARVRCamera"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.294615, 0 )
spot_range = 18.7688
spot_angle = 8.28695

[node name="ARVRController" type="ARVRController" parent="ARVROrigin"]
controller_id = 1

[node name="ARVRController2" type="ARVRController" parent="ARVROrigin"]
controller_id = 2

[node name="Stuff" type="Spatial" parent="."]

[node name="Cube" type="MeshInstance" parent="Stuff"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -8.08437 )
mesh = SubResource( 1 )
material/0 = null

[node name="Cylinder" type="MeshInstance" parent="Stuff"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 6.34567, 1, 0 )
mesh = SubResource( 2 )
material/0 = null

[node name="Sphere" type="MeshInstance" parent="Stuff"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 1, 3 )
mesh = SubResource( 3 )
material/0 = null

[node name="OmniLight" type="OmniLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, 0 )
light_energy = 0.5
omni_range = 12.2888

